index.css
html,
body {
  margin: 0 auto;
  padding: 0;
}
:root {
  --btns: rgb(99, 53, 31);
  --btns-hover: rgb(178, 118, 90);
  --lb: rgb(142, 205, 255, 50%);
  --bl: rgba(33, 118, 189, 0.75);
  --darkbl: rgb(6, 50, 87);
  --font-w: #fff;
  --font-bl: rgb(0, 0, 0);
  --form-bg: rgb(242, 249, 255);
  --section-bg: rgb(101 35 4 / 20%);
  --caps: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Noto Sans",
    "Ubuntu", "Droid Sans", "Helvetica Neue", sans-serif;
}
#form-and-scores {
  height: 100%;
}
body {
  font-size: 16.5px;
  font-family: var(--caps);
}

#title {
  display: flex;
  justify-content: center;
  color: sienna;
  flex-direction: column;
}
#title img {
  margin: 15px;
}
.row-center {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
}
.col-wide {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.app {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
  height: 100vh;
}
#scores-container {
  width: 100%;
  align-items: center;
  height: 100%;
  justify-content: space-around;
  margin-right: 50px;
}
#header {
  position: absolute;
  left: 15%;
  top: 25%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  bottom: 25%;
}
#scores-ul {
  list-style: none;
  width: 100%;
}
#scores-ul li {
  width: 100%;
  display: flex;
  justify-content: space-between;
  height: 36px;
}
#scores-ul li:nth-child(odd) {
  color: var(--bl);
}
#scores-ul li:nth-child(even) {
  color: var(--darkbl);
}
#username-form {
}
#username-form label {
  color: brown;
  text-shadow: -1px -1px 0 cornsilk, 1px -1px 0 cornsilk, -1px 1px 0 cornsilk,
    1px 1px 0 cornsilk;
}

#username-form p {
  font-size: 20px;
  color: red;
  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black,
    1px 1px 0 black;
}
.form-label {
  margin: 20px 20px 4px 20px;
  font-size: 20px;
  font-weight: 650;
  text-transform: uppercase;
  letter-spacing: 0.025;
}
#play-btn {
  width: 100%;
  height: 36px;
  font-size: 17px;
  border-radius: 3px;
  letter-spacing: 0.075em;
  background-color: var(--btns);
  color: var(--font-w);
  margin-top: 16px;
}
.section.order-1 {
  padding: 8px 40px;
  height: 325px;
  width: 325px;
  background-color: var(--form-bg);
  border-radius: 3px;
  box-shadow: 0 12px 24px -6px rgba(9, 30, 66, 0.2),
    0 0 0 1px rgba(9, 30, 66, 0.08);
}
#play-btn:hover {
  background-color: var(--btns-hover);
}
#play-btn #score-div #play-again-btn {
}

#score-div #score-div-h2 {
}
.form-input {
  height: 36px;
  font-size: 16px;
  padding-left: 12px;
  border: 2px solid black;
  border-radius: 2px;
  background-color: var(--lb);
  color: var(--font-bl);
}
.form-input:hover {
  background-color: var(--bl);
}
.scores-underline {
  position: absolute;
  transform: rotate(90deg);
  bottom: -20px;
  height: 80%;
}
.row-center h1 {
  color: var(--btns);
}
.scores-underline.log-1 {
  right: 10px;
}
.scores-underline.log-2 {
}
.scores-underline.log-3 {
  left: 10px;
}
.section.order-3 {
  height: 100%;
  background-color: var(--section-bg);
  flex: 3;
  display: flex;
  justify-content: center;
  align-items: center;
}
#play-again-btn {
  position: fixed;
  left: 25%;
  top: 40%;
}
#instructions {
  width: 50%;
  position: absolute;
  top: 2.5%;
  right: 95%;
  left: 5%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.move-cont {
  display: flex;
  align-items: center;
  /* position: absolute;
  bottom: 0;
  right: 25%;
  left: 25%; */
}

.arrow-keys {
  color: white;
  height: 30px;
  font-size: 12px;
  background-color: black;
  width: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 2px;
}
.arrow-keys.left {
  transform: rotate(90deg);
}
.arrow-keys.right {
  transform: rotate(270deg);
}
.again {
  width: 250px;
  height: 44px;
  font-size: 17px;
  border-radius: 3px;
  letter-spacing: 0.075em;
  background-color: var(--btns);
  color: var(--font-w);
  margin-top: 16px;
  font-weight: 600;
}
.section {
  width: 100%;
}
.section.order-2 {
  flex: 2;
  height: 100%;
}

.score-text {
  padding: 5%;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}
#forms-and-scores {
  margin-right: 50px;
  width: 100%;
}
#player {
  font-size: 22px;
  font-weight: 900;
  letter-spacing: 0;
  font-family: var(--caps);
  text-transform: uppercase;
}
#player span:nth-child(2) {
  text-transform: initial;
  font-weight: 700;
  color: var(--darkbl);
}
.instruction-text {
  font-size: 14px;
  font-family: var(--caps);
  text-transform: uppercase;
  font-weight: 650;
  margin: 0 8px;
}
.dodge-cont {
  bottom: 0;
}

